--- a/src/Pages/Navbar/nav-bar.css
+++ b/src/Pages/Navbar/nav-bar.css
@@ -2,44 +2,32 @@
     height: 10rem;
     width:11rem;
     object-fit:cover;
+    margin-top: 4vh;
+  
 }
 
 .navbar{
     height: 5rem;
     width: 100vw;
     max-width: 75rem;
+    margin-right: 20rem;
     margin: 0 auto;
     padding: 1rem 2rem;
     display: flex; 
     align-items: center;
     justify-content: space-between;
     position: sticky;
-    z-index: 3
+    z-index: 3;
+    margin-right: 100rem;
 }
 .nav-barItem{
-    margin: 1rem
+    margin: 1rem;
+     font-size: 23px;
 }
 
 .nav-barItem:hover{
-    color:burlywood;
+    color:#D2B48C;
     padding-bottom: 0, 5rem;
     border-bottom: 2px solid;
 }
 
-.desktopButtonContact{
-    background-color:burlywood;
-    border-radius: 2rem;
-    align-items: center;
-    justify-content:center;
-    display: flex;
-    padding: 0rem 1rem
-    
-}
-
-.desktopButtonImage{
-    object-fit: cover;
-    height: 1rem;
-    width: 1rem;
-    margin: 1rem;
-  
-}
