--- a/src/Pages/About/about.css
+++ b/src/Pages/About/about.css
@@ -1,42 +1,115 @@
 #aboutSection {
-  height: calc(100vh - 4rem);
+  height: calc(100vh - 5rem); 
   width: 100vw;
   max-width: 75rem;
   margin: 0 auto;
   overflow: hidden;
-  margin-left: 5rem;
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-between;
+  position: relative;
+  background-color: #8daed1; 
+  border-radius: 30px; 
+  padding: 2rem; 
+  box-sizing: border-box;
+  margin-top: 5rem;
 }
-.aboutImage {
-  position: absolute;
-  top: 9rem;
-  right: 0;
-  z-index: -1;
-  object-fit: cover;
-  height: 100vh;
-  width: 40vw;
-  margin-right: 4rem;
-}
-.aboutDescription{
-     height: 100vh;
-     width: 100vw;
-     padding: 2rem;
-     font-size: 4rem;
-     font-weight: 700;
-     display:flex;
-     flex-direction: column;
-     justify-content: center;
-}
-.aboutWord{
-    font-size: 2rem;
-    font-weight: 100;
-}
-.aboutTitle{
-   color: #D2B48C;
-    font-size: 3.70rem;
-    font-weight: 600;
 
+.aboutImage {
+  position: relative;
+  object-fit: cover;
+  height: 100%;
+  width: 50vw; 
+  z-index: 1;
 }
-.aboutMessage{
-    font-size: 1.25rem;
-     font-weight: 100;
+
+.aboutDescription {
+  position: relative;
+  z-index: 2;
+  color: black;
+  text-align: left;
+  padding: 2rem;
+  font-size: 3rem;
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 45vw; 
+}
+
+
+.aboutTitle {
+  color: #043060;
+  font-size: 3.7rem;
+  font-weight: 600;
+}
+
+.aboutWord {
+  font-size: 2rem;
+  font-weight: 100;
+}
+
+.aboutMessage {
+  font-size: 1.25rem;
+  font-weight: 100;
+}
+
+
+@media (max-width: 768px) {
+  #aboutSection {
+    flex-direction: column; 
+    height: 80vh;
+    padding: 1rem;
+    margin-bottom: 2rem;
+  }
+
+  .aboutImage {
+    height: 45vh; 
+    width: 100vw; 
+    margin-bottom: 1rem; 
+  }
+
+  .aboutDescription {
+    font-size: 2rem; 
+    text-align: center; 
+    width: 60%; 
+   
+  }
+
+  .aboutTitle {
+    font-size: 2.5rem;
+  }
+
+  .aboutWord {
+    font-size: 1.5rem;
+  }
+
+  .aboutMessage {
+    font-size: 1rem;
+  }
+}
+
+
+@media (max-width: 480px) {
+  .aboutImage {
+    height: 60vh; 
+    width: 80vw;
+  }
+
+  .aboutDescription {
+    font-size: 1.5rem; 
+    text-align: center; 
+  }
+
+  .aboutTitle {
+    font-size: 2rem;
+  }
+
+  .aboutWord {
+    font-size: 1rem;
+  }
+
+  .aboutMessage {
+    font-size: 0.9rem;
+  }
 }
