--- a/src/Pages/Navbar/nav-bar.css
+++ b/src/Pages/Navbar/nav-bar.css
@@ -1,33 +1,61 @@
-.logo{
-    height: 10rem;
-    width:11rem;
-    object-fit:cover;
-    margin-top: 4vh;
-  
+.logo {
+  height: 10rem;
+  width: 11rem;
+  object-fit: cover;
+  margin-top: 4vh;
 }
 
-.navbar{
-    height: 5rem;
-    width: 100vw;
-    max-width: 75rem;
-    margin-right: 20rem;
-    margin: 0 auto;
-    padding: 1rem 2rem;
-    display: flex; 
-    align-items: center;
-    justify-content: space-between;
-    position: sticky;
-    z-index: 3;
-    margin-right: 100rem;
-}
-.nav-barItem{
-    margin: 1rem;
-     font-size: 23px;
+.navbar {
+  height: 5rem; 
+  width: 100%;
+  padding: 1rem 2rem; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 3;
+  background-color: white; 
+  box-sizing: border-box; 
 }
 
-.nav-barItem:hover{
-    color:#D2B48C;
-    padding-bottom: 0, 5rem;
-    border-bottom: 2px solid;
+.nav-barItem {
+  margin: 1rem;
+  font-size: 23px; 
+  color: black;
+  text-decoration: none;
 }
 
+.nav-barItem:hover {
+  color: #2298bc;
+  padding-bottom: 0.5rem;
+}
+
+
+@media (max-width: 768px) {
+  .navbar {
+    padding: 0.8rem 1.5rem; 
+    height: 4rem; 
+  }
+
+  .nav-barItem {
+    font-size: 18px; 
+  }
+}
+
+
+@media (max-width: 480px) {
+  .logo {
+    height: 8rem; 
+    width: 9rem;
+  }
+
+  .navbar {
+    padding: 0.5rem 1rem; 
+    height: 3.5rem; 
+  }
+
+  .nav-barItem {
+    font-size: 16px;
+  }
+}
